--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 body{
+    background: black;
     color: red;
     text-align: center;
     font-family: "Arial";
@@ -7,12 +8,17 @@ body{
     padding: 0;
 }
 #cabecera{
-    background:#33A;
+    
+    background-color:rgb(151, 184, 250) ;
     color: white;
     font-weight: bold;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     margin: 0;
     padding: 0.5em;
+}
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
 }
 #cabecera #tagline{
       padding: 0 0 0 1em;
@@ -31,4 +37,5 @@ body{
 }
 #post{
     padding: 1em;
+    background: white;
 }
