--- a/css/estilos.css
+++ b/css/estilos.css
@@ -39,7 +39,7 @@ body{
     padding: 1em;
 }
 #footer{
-    background: #777;
+    background-color:rgb(151, 184, 250) ;
     color: white;
     text-align: center; padding: 0.5em;
 }
